tests/compile-fail/trait/custom_impl.stderr
error[E0277]: the trait bound `BootlegFlags: ImplementedByBitFlagsMacro` is not satisfied
 --> tests/compile-fail/trait/custom_impl.rs:5:6
  |
5 | impl BitFlags for BootlegFlags {
  |      ^^^^^^^^ the trait `ImplementedByBitFlagsMacro` is not implemented for `BootlegFlags`
  |
note: required by a bound in `BitFlags`
 --> src/bitflags_trait.rs
  |
  | pub trait BitFlags: ImplementedByBitFlagsMacro {
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `BitFlags`
